# mob

./: .Rbuildignore  .clang-format  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  _pkgdown.yml  authors.html  benchmark.R  bibliography.html  bibliography.md  flake.nix  index.html  pkgdown.yml  search.json  sir.R  sitemap.xml
.buildkite/: pipeline.yaml  setup-deps.R
R/: RcppExports.R  catch-routine-registration.R  catch.R  mob-package.R  mob.R
benchmarks/: helper.R  test-bitset.R  test-infection.R  test-random.R
man/: bitset_choose.Rd  bitset_clone.Rd  bitset_create.Rd  bitset_equal.Rd  bitset_from_vector.Rd  bitset_insert.Rd  bitset_invert.Rd  bitset_or.Rd  bitset_remove.Rd  bitset_sample.Rd  bitset_size.Rd  bitset_to_vector.Rd  create_wrapper.Rd  double_vector_lround.Rd  integer_vector_match_eq.Rd  integer_vector_match_gt.Rd  random_create.Rd  vector_values.Rd
reference/: bitset_choose.html  bitset_clone.html  bitset_create.html  bitset_from_vector.html  bitset_insert.html  bitset_invert.html  bitset_or.html  bitset_remove.html  bitset_sample.html  bitset_size.html  bitset_to_vector.html  create_wrapper.html  index.html  random_create.html
src/: .gitignore  Makevars  RcppExports.cpp  alias_table_wrapper.h  bitset_wrapper.h  conversion.h  device_random.h  infection.cu  infection.h  infection_wrapper.h  interface.h  iterator.h  mob.cu  mob.h  mob_types.h  parallel_random.h  partition_wrapper.h  random.cu  random_wrapper.h  roaring.h  sample.h  sampler.cu  (+10 more)
src/cmake/catch2/: CMakeLists.txt
src/cmake/rapidcheck/: CMakeLists.txt
(+37 files in other folders)
